Funktion rendite_errechnen() und Dokumentation

--- a/DepotwertRechner.ipynb
+++ b/DepotwertRechner.ipynb
@@ -1,230 +1,237 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.8.6"
-    },
-    "colab": {
-      "name": "DepotwertRechner.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "-H7j3Ru2mXMk"
+   },
+   "source": [
+    "# Benutzung des Tools\n",
+    "\n",
+    "1. Unter dem Namen der Datei auf Runtime/Laufzeit drücken.\n",
+    "2. Run all auswählen.\n",
+    "3. Auf Eingabenabfrage warten und diese tätigen."
+   ]
   },
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "-H7j3Ru2mXMk"
-      },
-      "source": [
-        "# Benutzung des Tools\n",
-        "\n",
-        "1. Unter dem Namen der Datei auf Runtime/Laufzeit drücken.\n",
-        "2. Run all auswählen.\n",
-        "3. Auf Eingabenabfrage warten und diese tätigen."
-      ]
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "id": "u8RVVWskmXM0"
+   },
+   "outputs": [],
+   "source": [
+    "import pandas_datareader.data as reader\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import datetime as dt\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "GCg5MlC_nikN"
+   },
+   "source": [
+    "## Eingabeaufforderung\n",
+    "\n",
+    "Hier die angeforderten Eingaben ausfüllen.\n",
+    "\n",
+    "- Die Anzahl der enthaltenen Positionen im Portfolio\n",
+    "- Die Position und die monatliche Sparrate dieser Position\n",
+    "- Das Startdatum des Portfolios\n",
+    "\n",
+    "Es lassen sich mit diesem Tool nicht nur ETFs und Aktien, sondern auch Rohstoffe und alle Daten, die über Yahoo Finance zu finden sind analysieren."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
     },
+    "id": "4ufinVC252gQ",
+    "outputId": "d1df5e94-f311-4e22-e90c-f16dc70a95ab"
+   },
+   "outputs": [
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "u8RVVWskmXM0"
-      },
-      "source": [
-        "import pandas_datareader.data as reader\n",
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "import datetime as dt\n",
-        "import math"
-      ],
-      "execution_count": 1,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "GCg5MlC_nikN"
-      },
-      "source": [
-        "## Eingabeaufforderung\n",
-        "\n",
-        "Hier die angeforderten Eingaben ausfüllen.\n",
-        "\n",
-        "- Die Anzahl der enthaltenen Positionen im Portfolio\n",
-        "- Die Position und die monatliche Sparrate dieser Position\n",
-        "- Das Startdatum des Portfolios\n",
-        "\n",
-        "Es lassen sich mit diesem Tool nicht nur ETFs und Aktien, sondern auch Rohstoffe und alle Daten, die über Yahoo Finance zu finden sind analysieren."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "4ufinVC252gQ",
-        "outputId": "d1df5e94-f311-4e22-e90c-f16dc70a95ab"
-      },
-      "source": [
-        "## Erstellen des Portfolios und Zeitraumes\n",
-        "num_assets = int(input(\"Wieviele Assets sind in Ihrem Musterportfolio? \"))\n",
-        "\n",
-        "asset_list = []\n",
-        "rates_list = []\n",
-        "i = 0\n",
-        "for i in range(num_assets):\n",
-        "  asset_list.append(input(\"Welches Asset würden Sie gerne Ihrem Portfolio hinzufügen? \"))\n",
-        "  rates_list.append(float(input(\"Wieviel zahlen monatlich in dieses Asset? \")))\n",
-        "\n",
-        "portfolio = dict(zip(asset_list, rates_list))\n",
-        "\n",
-        "formation = input(\"Bitte geben Sie den Beginn des Portfolios ein (Format: 2015,12,7): \").split(\",\")\n",
-        "formation = dt.datetime(int(formation[0]), int(formation[1]), int(formation[2]))"
-      ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Wieviele Assets sind in Ihrem Musterportfolio? 5\n",
-            "Welches Asset würden Sie gerne Ihrem Portfolio hinzufügen? AAPL\n",
-            "Wieviel zahlen monatlich in dieses Asset? 100\n",
-            "Welches Asset würden Sie gerne Ihrem Portfolio hinzufügen? TSLA\n",
-            "Wieviel zahlen monatlich in dieses Asset? 100\n",
-            "Welches Asset würden Sie gerne Ihrem Portfolio hinzufügen? SAP.DE\n",
-            "Wieviel zahlen monatlich in dieses Asset? 100\n",
-            "Welches Asset würden Sie gerne Ihrem Portfolio hinzufügen? O\n",
-            "Wieviel zahlen monatlich in dieses Asset? 100\n",
-            "Welches Asset würden Sie gerne Ihrem Portfolio hinzufügen? FB\n",
-            "Wieviel zahlen monatlich in dieses Asset? 100\n",
-            "Bitte geben Sie den Beginn des Portfolios ein (Format: 2015,12,7): 2015,1,1\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "HGPKx4rYB9v0"
-      },
-      "source": [
-        "## Schlusskurse und Veränderungen ermitteln\n",
-        "\n",
-        "df = reader.get_data_yahoo(asset_list,formation,interval='m')['Adj Close']\n",
-        "mtl_ret = df.pct_change() + 1\n",
-        "mtl_ret = mtl_ret.reset_index(drop=True)"
-      ],
-      "execution_count": 3,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "4aJnqVWKCmCT"
-      },
-      "source": [
-        "# DataFrame mit den Startwerten\n",
-        "portfolio_werte = pd.DataFrame(columns=asset_list, index=[0])\n",
-        "for asset in asset_list:\n",
-        "  portfolio_werte.loc[0,asset] = portfolio[asset]\n",
-        "\n",
-        "\n",
-        "# Berechnung der Endwerte für die einzelnen Assets\n",
-        "for i in range(1, mtl_ret.shape[0]):\n",
-        "  for asset in asset_list:\n",
-        "    portfolio_werte[asset] += portfolio[asset]\n",
-        "    if not math.isnan(mtl_ret.loc[i, asset]):\n",
-        "      portfolio_werte[asset] *= mtl_ret.loc[i,asset]"
-      ],
-      "execution_count": 10,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "COWpYTkIou6I"
-      },
-      "source": [
-        "# Referenzwerte berechnen\n",
-        "referenz_list = ['URTH', '^GSPC', '^GDAXI']\n",
-        "dfref = reader.get_data_yahoo(referenz_list, formation,interval='m')['Adj Close']\n",
-        "mtl_retref = dfref.pct_change() + 1\n",
-        "mtl_retref = mtl_retref.reset_index(drop=True)\n",
-        "\n",
-        "monatliche_einz = 0\n",
-        "for i in rates_list:\n",
-        "  monatliche_einz += i\n",
-        "\n",
-        "referenz_werte = pd.DataFrame({'URTH': monatliche_einz,'^GSPC': monatliche_einz,'^GDAXI':monatliche_einz}, index=[0])\n",
-        "\n",
-        "for x in range(1, mtl_retref.shape[0]):\n",
-        "  for referenz in referenz_list:\n",
-        "    referenz_werte[referenz] += monatliche_einz\n",
-        "    if not math.isnan(mtl_retref.loc[x,referenz]):\n",
-        "      referenz_werte[referenz] *= mtl_retref.loc[x,referenz]"
-      ],
-      "execution_count": 11,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "dQGVUSlhmXR4",
-        "outputId": "f2f120d5-5c4a-4813-b1b9-a0e5e5f2dfb8"
-      },
-      "source": [
-        "gesamt_depotwert = 0\n",
-        "for column in portfolio_werte:\n",
-        "  gesamt_depotwert += round(portfolio_werte[column][0],2)\n",
-        "  print(f\"Ihr {column} wäre auf einen Wert von {round(portfolio_werte[column][0],2)}€ gewachsen.\")\n",
-        "\n",
-        "print(f\"Ihr gesamtes Portfolio wäre somit auf einen Wert von {round(gesamt_depotwert,2)}€ gewachsen.\")\n",
-        "print(\"\")\n",
-        "print(\"Zum Vergleich ein paar Indizes:\")\n",
-        "\n",
-        "\n",
-        "for x in referenz_werte:\n",
-        "  print(f\"Ein {x} wäre bei gleicher Sparrate einen Wert von {round(referenz_werte[x][0],2)}€ gewachsen.\")\n"
-      ],
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Ihr AAPL wäre auf einen Wert von 54029.52€ gewachsen.\n",
-            "Ihr TSLA wäre auf einen Wert von 210142.72€ gewachsen.\n",
-            "Ihr SAP.DE wäre auf einen Wert von 18610.86€ gewachsen.\n",
-            "Ihr O wäre auf einen Wert von 17380.16€ gewachsen.\n",
-            "Ihr FB wäre auf einen Wert von 28511.36€ gewachsen.\n",
-            "Ihr gesamtes Portfolio wäre somit auf einen Wert von 328674.62€ gewachsen.\n",
-            "\n",
-            "Zum Vergleich ein paar Indizes:\n",
-            "Ein URTH wäre bei gleicher Sparrate einen Wert von 111280.67€ gewachsen.\n",
-            "Ein ^GSPC wäre bei gleicher Sparrate einen Wert von 112642.85€ gewachsen.\n",
-            "Ein ^GDAXI wäre bei gleicher Sparrate einen Wert von 87631.25€ gewachsen.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wieviele Assets sind in Ihrem Musterportfolio? 3\n",
+      "Welches Asset würden Sie gerne Ihrem Portfolio hinzufügen? AAPL\n",
+      "Wieviel zahlen monatlich in dieses Asset? 100\n",
+      "Welches Asset würden Sie gerne Ihrem Portfolio hinzufügen? TSLA\n",
+      "Wieviel zahlen monatlich in dieses Asset? 100\n",
+      "Welches Asset würden Sie gerne Ihrem Portfolio hinzufügen? MSFT\n",
+      "Wieviel zahlen monatlich in dieses Asset? 100\n",
+      "Bitte geben Sie den Beginn des Portfolios ein (Format: 2015,12,7): 2015,1,1\n"
+     ]
     }
-  ]
+   ],
+   "source": [
+    "## Erstellen des Portfolios und Zeitraumes\n",
+    "\n",
+    "# Portfolio zusammensetzen\n",
+    "num_assets = int(input(\"Wieviele Assets sind in Ihrem Musterportfolio? \"))\n",
+    "asset_list = []\n",
+    "rates_list = []\n",
+    "i = 0\n",
+    "for i in range(num_assets):\n",
+    "  asset_list.append(input(\"Welches Asset würden Sie gerne Ihrem Portfolio hinzufügen? \"))\n",
+    "  rates_list.append(float(input(\"Wieviel zahlen monatlich in dieses Asset? \")))\n",
+    "portfolio = dict(zip(asset_list, rates_list))\n",
+    "\n",
+    "# Zeitraum bestimmen\n",
+    "formation = input(\"Bitte geben Sie den Beginn des Portfolios ein (Format: 2015,12,7): \").split(\",\")\n",
+    "formation = dt.datetime(int(formation[0]), int(formation[1]), int(formation[2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Referenzdaten bestimmen\n",
+    "\n",
+    "# Gesamte monatliche Einzahlungen bestimmen\n",
+    "monatliche_einz = 0\n",
+    "for i in rates_list:\n",
+    "  monatliche_einz += i\n",
+    "\n",
+    "# Referenzdepots zusammensetzen\n",
+    "referenz_list = ['URTH', '^GSPC', '^GDAXI']\n",
+    "referenz_einz = [monatliche_einz, monatliche_einz, monatliche_einz] \n",
+    "referenz_depot = dict(zip(referenz_list, referenz_einz))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Funktion zur Erstellung von Depots mit gebenen Einzahlungen\n",
+    "## Wird für eigenes und Referenzdepot verwendet\n",
+    "def rendite_berechnen(ticker_list, einzahlungen):\n",
+    "    \n",
+    "    # Kurse der Ticker einholen und monatliche Rendite berechnen\n",
+    "    df = reader.get_data_yahoo(ticker_list,formation,interval='m')['Adj Close']\n",
+    "    mtl_ret = df.pct_change() + 1\n",
+    "    mtl_ret = mtl_ret.reset_index(drop=True)\n",
+    "\n",
+    "    # Depotwert nach angegebener Zeit berechnen\n",
+    "    depot_werte = pd.DataFrame(0,columns=ticker_list, index=[0])\n",
+    "    \n",
+    "    for i in range(mtl_ret.shape[0]):\n",
+    "        for ticker in ticker_list:\n",
+    "            depot_werte.loc[0,ticker] += einzahlungen[ticker]\n",
+    "            if not math.isnan(mtl_ret.loc[i, ticker]):\n",
+    "                depot_werte[ticker] *= mtl_ret.loc[i, ticker]\n",
+    "                \n",
+    "    return depot_werte"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Berechnen der Depotwerte (Portfolio und Referenzdepot)\n",
+    "\n",
+    "portfolio_werte = rendite_berechnen(asset_list, portfolio)\n",
+    "referenz_werte = rendite_berechnen(referenz_list, referenz_depot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "dQGVUSlhmXR4",
+    "outputId": "f2f120d5-5c4a-4813-b1b9-a0e5e5f2dfb8"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ihr AAPL wäre auf einen Wert von 27064.76€ gewachsen.\n",
+      "Ihr TSLA wäre auf einen Wert von 105121.36€ gewachsen.\n",
+      "Ihr MSFT wäre auf einen Wert von 22793.04€ gewachsen.\n",
+      "Ihr gesamtes Portfolio wäre somit auf einen Wert von 154979.16€ gewachsen.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Zusammenrechnung der Einzelwerte des Porfolios\n",
+    "\n",
+    "# Berechnung des Wertes des gesamten Portfolios\n",
+    "gesamt_depotwert = 0\n",
+    "for column in portfolio_werte:\n",
+    "  gesamt_depotwert += round(portfolio_werte[column][0],2)\n",
+    "  print(f\"Ihr {column} wäre auf einen Wert von {round(portfolio_werte[column][0],2)}€ gewachsen.\")\n",
+    "\n",
+    "print(f\"Ihr gesamtes Portfolio wäre somit auf einen Wert von {round(gesamt_depotwert,2)}€ gewachsen.\")\n",
+    "print(\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zum Vergleich ein paar Indizes:\n",
+      "Ein URTH wäre bei gleicher Sparrate einen Wert von 66768.4€ gewachsen.\n",
+      "Ein ^GSPC wäre bei gleicher Sparrate einen Wert von 67585.71€ gewachsen.\n",
+      "Ein ^GDAXI wäre bei gleicher Sparrate einen Wert von 52578.75€ gewachsen.\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Ausgabe der Referenzwerte\n",
+    "\n",
+    "print(\"Zum Vergleich ein paar Indizes:\")\n",
+    "for x in referenz_werte:\n",
+    "  print(f\"Ein {x} wäre bei gleicher Sparrate einen Wert von {round(referenz_werte[x][0],2)}€ gewachsen.\")"
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "name": "DepotwertRechner.ipynb",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.6"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 1
 }
