Unnötiger reset_index() entfernt
df.reset_index() nicht nötig, da mtl_ret diesen ausführt.

--- a/DepotwertRechner.ipynb
+++ b/DepotwertRechner.ipynb
@@ -119,7 +119,7 @@
     "def rendite_berechnen(ticker_list, einzahlungen):\n",
     "    \n",
     "    # Kurse der Ticker einholen und monatliche Rendite berechnen\n",
-    "    df = reader.get_data_yahoo(ticker_list,formation,interval='m')['Adj Close'].reset_index(drop=True)\n",
+    "    df = reader.get_data_yahoo(ticker_list,formation,interval='m')['Adj Close']\n",
     "    mtl_ret = df.pct_change() + 1\n",
     "    mtl_ret = mtl_ret.reset_index(drop=True)\n",
     "    \n",
