--- a/DepotwertRechner.ipynb
+++ b/DepotwertRechner.ipynb
@@ -60,12 +60,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wieviele Assets sind in Ihrem Musterportfolio? 3\n",
+      "Wieviele Assets sind in Ihrem Musterportfolio? 1\n",
       "Welches Asset würden Sie gerne Ihrem Portfolio hinzufügen? URTH\n",
-      "Wieviel zahlen monatlich in dieses Asset? 1\n",
-      "Welches Asset würden Sie gerne Ihrem Portfolio hinzufügen? ^GSPC\n",
-      "Wieviel zahlen monatlich in dieses Asset? 1\n",
-      "Welches Asset würden Sie gerne Ihrem Portfolio hinzufügen? ^GDAXI\n",
       "Wieviel zahlen monatlich in dieses Asset? 1\n",
       "Bitte geben Sie den Beginn des Portfolios ein (Format: 2015,12,7): 2020,1,1\n"
      ]
@@ -119,18 +115,16 @@
     "def rendite_berechnen(ticker_list, einzahlungen):\n",
     "    \n",
     "    # Kurse der Ticker einholen und monatliche Rendite berechnen\n",
-    "    df = reader.get_data_yahoo(ticker_list,formation,interval='m')['Adj Close']\n",
+    "    df = reader.get_data_yahoo(ticker_list,formation,interval='m')['Adj Close'].reset_index(drop=True)\n",
     "    mtl_ret = df.pct_change() + 1\n",
     "    mtl_ret = mtl_ret.reset_index(drop=True)\n",
     "    \n",
-    "    \n",
     "    # Depotwert nach angegebener Zeit berechnen\n",
     "    depot_werte = pd.DataFrame(0,columns=ticker_list, index=[0])\n",
-    "    for i in range(mtl_ret.shape[0]):\n",
+    "    for i in range(1, mtl_ret.shape[0]):\n",
     "        for ticker in ticker_list:\n",
-    "            if not mtl_ret.loc[i,ticker] == 1.000000:\n",
+    "            if (not math.isnan(df.loc[i,ticker])) and (not math.isnan(mtl_ret.loc[i,ticker])):\n",
     "                depot_werte.loc[0,ticker] += einzahlungen[ticker]\n",
-    "            if not math.isnan(mtl_ret.loc[i,ticker]):\n",
     "                depot_werte[ticker] *= mtl_ret.loc[i, ticker]\n",
     "                \n",
     "    return depot_werte"
@@ -163,10 +157,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ihr URTH wäre auf einen Wert von 17.15€ gewachsen.\n",
-      "Ihr ^GSPC wäre auf einen Wert von 16.85€ gewachsen.\n",
-      "Ihr ^GDAXI wäre auf einen Wert von 15.8€ gewachsen.\n",
-      "Ihr gesamtes Portfolio wäre somit auf einen Wert von 49.8€ gewachsen.\n",
+      "Ihr URTH wäre auf einen Wert von 15.78€ gewachsen.\n",
+      "Ihr gesamtes Portfolio wäre somit auf einen Wert von 15.78€ gewachsen.\n",
       "\n"
      ]
     }
@@ -194,9 +186,9 @@
      "output_type": "stream",
      "text": [
       "Zum Vergleich ein paar Indizes:\n",
-      "Ein URTH wäre bei gleicher Sparrate einen Wert von 51.44€ gewachsen.\n",
-      "Ein ^GSPC wäre bei gleicher Sparrate einen Wert von 50.56€ gewachsen.\n",
-      "Ein ^GDAXI wäre bei gleicher Sparrate einen Wert von 47.41€ gewachsen.\n"
+      "Ein URTH wäre bei gleicher Sparrate einen Wert von 15.78€ gewachsen.\n",
+      "Ein ^GSPC wäre bei gleicher Sparrate einen Wert von 15.53€ gewachsen.\n",
+      "Ein ^GDAXI wäre bei gleicher Sparrate einen Wert von 14.73€ gewachsen.\n"
      ]
     }
    ],
