rendite_berechnen Improvement

--- a/DepotwertRechner.ipynb
+++ b/DepotwertRechner.ipynb
@@ -74,20 +74,20 @@
     "num_assets = int(input(\"Wieviele Assets sind in Ihrem Musterportfolio? \"))\n",
     "asset_list = []\n",
     "rates_list = []\n",
-    "i = 0\n",
+    "\n",
     "for i in range(num_assets):\n",
     "  asset_list.append(input(\"Welches Asset würden Sie gerne Ihrem Portfolio hinzufügen? \"))\n",
     "  rates_list.append(float(input(\"Wieviel zahlen monatlich in dieses Asset? \")))\n",
     "portfolio = dict(zip(asset_list, rates_list))\n",
     "\n",
     "# Zeitraum bestimmen\n",
-    "formation = input(\"Bitte geben Sie den Beginn des Portfolios ein (Format: 2015,12,7): \").split(\",\")\n",
-    "formation = dt.datetime(int(formation[0]), int(formation[1]), int(formation[2]))"
+    "start_eingabe = input(\"Bitte geben Sie den Beginn des Portfolios ein (Format: 2015,12,7): \").split(\",\")\n",
+    "formation = dt.datetime(int(start_eingabe[0]), int(start_eingabe[1]), int(start_eingabe[2]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,52 +98,49 @@
     "for i in rates_list:\n",
     "  monatliche_einz += i\n",
     "\n",
-    "# Referenzdepots zusammensetzen\n",
-    "referenz_list = ['URTH', '^GSPC','^GDAXI']\n",
-    "referenz_einz = [monatliche_einz, monatliche_einz, monatliche_einz] \n",
-    "referenz_depot = dict(zip(referenz_list, referenz_einz))"
+    "referenz_depot = {'URTH': monatliche_einz, '^GSPC': monatliche_einz, '^GDAXI': monatliche_einz}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Funktion zur Erstellung von Depots mit gebenen Einzahlungen\n",
     "## Wird für eigenes und Referenzdepot verwendet\n",
-    "def rendite_berechnen(ticker_list, einzahlungen):\n",
+    "def rendite_berechnen(depot):\n",
     "    \n",
     "    # Kurse der Ticker einholen und monatliche Rendite berechnen\n",
-    "    df = reader.get_data_yahoo(ticker_list,formation,interval='m')['Adj Close'].reset_index(drop=True)\n",
+    "    df = reader.get_data_yahoo(list(depot.keys()),formation,interval='m')['Adj Close'].reset_index(drop=True)\n",
     "    mtl_ret = df.pct_change() + 1\n",
     "    \n",
     "    # Depotwert nach angegebener Zeit berechnen\n",
-    "    depot_werte = pd.DataFrame(0,columns=ticker_list, index=[0])\n",
+    "    depot_werte = pd.DataFrame(0,columns=depot.keys(), index=[0])\n",
     "    for i in range(1, mtl_ret.shape[0]):\n",
-    "        for ticker in ticker_list:\n",
-    "            if (not math.isnan(df.loc[i,ticker])) and (not math.isnan(mtl_ret.loc[i,ticker])):\n",
-    "                depot_werte.loc[0,ticker] += einzahlungen[ticker]\n",
-    "                depot_werte[ticker] *= mtl_ret.loc[i, ticker]\n",
+    "        for key in depot.keys():\n",
+    "            if (not math.isnan(df.loc[i,key])) and (not math.isnan(mtl_ret.loc[i,key])):\n",
+    "                depot_werte.loc[0,key] += depot[key]\n",
+    "                depot_werte[key] *= mtl_ret.loc[i, key]\n",
     "                \n",
     "    return depot_werte"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Berechnen der Depotwerte (Portfolio und Referenzdepot)\n",
     "\n",
-    "portfolio_werte = rendite_berechnen(asset_list, portfolio)\n",
-    "referenz_werte = rendite_berechnen(referenz_list, referenz_depot)"
+    "portfolio_werte = rendite_berechnen(portfolio)\n",
+    "referenz_werte = rendite_berechnen(referenz_depot)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -177,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +184,7 @@
       "Zum Vergleich ein paar Indizes:\n",
       "Ein URTH wäre bei gleicher Sparrate einen Wert von 15.78€ gewachsen.\n",
       "Ein ^GSPC wäre bei gleicher Sparrate einen Wert von 15.53€ gewachsen.\n",
-      "Ein ^GDAXI wäre bei gleicher Sparrate einen Wert von 14.73€ gewachsen.\n"
+      "Ein ^GDAXI wäre bei gleicher Sparrate einen Wert von 14.74€ gewachsen.\n"
      ]
     }
    ],
